@@ -1,3 +1,8 @@
+2018-04-08  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* riscv-tdep.c (riscv_register_name): Only return names for actual
+	CSR register numbers, return NULL for anything else.
+
 2018-08-17  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* riscv-tdep.c (riscv_has_feature): Add extra comments.
